<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="browser">Browser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="download_image">Download image</string>
    <string name="profile">Profile</string>
    <string name="illumination">Illumination</string>
    <string name="file_management">File Management</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log out</string>
    <string name="networking">Networking</string>

</resources>