<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/baseline_add_comment_24"
            android:title="@string/browser"
            />

        <item
            android:id="@+id/background"
            android:icon="@drawable/baseline_download_24"
            android:title="@string/download"/>

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/profile"/>

        <item
            android:id="@+id/illuminationFragment"
            android:icon="@drawable/routine_fill0_wght400_grad0_opsz24"
            android:title="@string/illumination"/>

        <item
            android:id="@+id/fileFragment"
            android:icon="@drawable/folder_open_24dp_fill0_wght400_grad0_opsz24__1_"
            android:title="@string/file_management"/>

        <item
            android:id="@+id/networkingFragment"
            android:icon="@drawable/baseline_cloud_24"
            android:title="@string/networking"/>

        <item
            android:id="@+id/placesFragment"
            android:icon="@drawable/navigation"
            android:title="Places"/>

    </group>
</menu>