<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.sizov.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.sizov.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.sizov.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_brouser"
        android:name="ru.mirea.sizov.mireaproject.nav_brouser"
        android:label="Browser"
        tools:layout="@layout/fragment_nav_brouser"/>

    <fragment
        android:id="@+id/background"
        android:name="ru.mirea.sizov.mireaproject.Background"
        android:label="Background"
        tools:layout="@layout/fragment_background" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="ru.mirea.sizov.mireaproject.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/illuminationFragment"
        android:name="ru.mirea.sizov.mireaproject.IlluminationFragment"
        android:label="Illumination"
        tools:layout="@layout/fragment_illumination" />
    <fragment
        android:id="@+id/fileFragment"
        android:name="ru.mirea.sizov.mireaproject.FileFragment"
        android:label="File management"
        tools:layout="@layout/fragment_file" />
    <fragment
        android:id="@+id/networkingFragment"
        android:name="ru.mirea.sizov.mireaproject.NetworkingFragment"
        android:label="Networking"
        tools:layout="@layout/fragment_networking" />
    <fragment
        android:id="@+id/placesFragment"
        android:name="ru.mirea.sizov.mireaproject.PlacesFragment"
        android:label="Places"
        tools:layout="@layout/fragment_places" />

</navigation>